# pox-bot

./: .gitignore  README.md  bot.py  cache.py  ciphers.py  classes.py  data.py  emoticons.txt  emoticons2.txt  file-structure.md  leaderboard.db  leaderboard.db-journal  logger.py  main.py  pyproject.toml  requirements.txt  stuff.py
cogs/: activity.py  blacklist.py  calculator.py  chat.py  chatbot.py  checker.py  contributors.py  converters.py  counts.py  cserver.py  detector.py  dm.py  economy.py  eew.py.gg  feedback.py  filtering.py  fun.py  generator.py  get_api.py  giveaway.py  help.py  inactivity.py  inactivity.py.gg  info.py  leaderboard.py  leveling.py  limit_botinvite.py  management.py  message.py  others.py  random.py  rating.py  reaction-roles.py  role.py  search.py  silly.py  ticket.py  tts.py  user.py  utility.py  (+2 more)
conf/: logging.json
resources/: .gitignore  0255.txt  0492.txt  575.txt  blacklisted_words.json  contributors.json  contributors.v2.json  m1.txt  m2.txt  server_data.json  status.txt  translations.json  what_1.txt  what_2.txt
src/: chatbot.py  performance_gui.py
