[project]
name = "poxbot"
version = "0.1.0"
description = "A random discord bot made with silly + shit"
authors = [
    {name = "NoteSwiper",email = "ryuuking0410@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytz (>=2025.2,<2026.0)",
    "distro (>=1.9.0,<2.0.0)",
    "edge-tts (>=7.2.3,<8.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "voxpopuli (>=0.3.9,<0.4.0)",
    "piper-tts (>=1.3.0,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "markovify (>=0.9.4,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
