[project]
name = "pox-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "discord-py>=2.6.4",
    "distro>=1.9.0",
    "edge-tts>=7.2.3",
    "gtts>=2.5.4",
    "markovify>=0.9.4",
    "matplotlib>=3.10.7",
    "piper-tts>=1.3.0",
    "profanityfilter>=2.1.0",
    "pymojang>=2.0.6",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "roblox>=2.0.0",
    "thefuzz>=0.22.1",
]
